--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -38,7 +38,7 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    console.log(inventors.filter((person) => {if (person.year >= 1500 && person.year < 1600) {return person}}))
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
