--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -41,7 +41,7 @@
     console.log(inventors.filter((person) => {if (person.year >= 1500 && person.year < 1600) {return person}}))
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    console.log(inventors.map((person) => person.first + ' ' + person.last))
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
