--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -44,7 +44,7 @@
     console.log(inventors.map((person) => person.first + ' ' + person.last))
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-
+    console.log(inventors.map(item => item.year).sort((a, b) => a - b));
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
