--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -47,9 +47,9 @@
     console.log(inventors.map(item => item.year).sort((a, b) => a - b));
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    console.log(inventors.reduce((total, item) => total + (item.passed - item.year), 0))
     // 5. Sort the inventors by years lived
-
+    
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
