--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -38,18 +38,18 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    console.log(inventors.filter((person) => {if (person.year >= 1500 && person.year < 1600) {return person}}))
+    console.table(inventors.filter((person) => {if (person.year >= 1500 && person.year < 1600) {return person}}))
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-    console.log(inventors.map((person) => person.first + ' ' + person.last))
+    console.table(inventors.map((person) => person.first + ' ' + person.last))
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-    console.log(inventors.map(item => item.year).sort((a, b) => a - b));
+    console.table(inventors.map(item => item.year).sort((a, b) => a - b));
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
     console.log(inventors.reduce((total, item) => total + (item.passed - item.year), 0))
     // 5. Sort the inventors by years lived
-    console.log(inventors
+    console.table(inventors
       .map((item) => (item.passed - item.year))
       .sort((a, b) => a - b)
     )
