--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -55,7 +55,11 @@
     )
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    let links = document.querySelectorAll('.mw-category a');
+    console.log(Array.from(links)
+      .map(link => link.textContent)
+      .filter(name => name.includes('de'))
+  );
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
