--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -63,7 +63,10 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
+    console.log(people
+      .map(item => item.split(", ")[1])
+      .sort()
+    )
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
