--- a/04 - Array Cardio Day 1/index-START_copy.html
+++ b/04 - Array Cardio Day 1/index-START_copy.html
@@ -70,7 +70,15 @@
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-
+    const transportation = data.reduce((obj, item)=>{
+      if (!obj[item]){
+        obj[item] = 1;
+      } else{
+        obj[item]++;
+      }
+      return obj;
+    }, {})
+    console.log (transportation);
   </script>
 </body>
 </html>
