--- a/07 - Array Cardio Day 2/index-START copy.html
+++ b/07 - Array Cardio Day 2/index-START copy.html
@@ -27,6 +27,7 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    let is19Some = people.some((value, index) => 2025 - people[index].year >= 19);
     // Array.prototype.every() // is everyone 19 or older?
 
     // Array.prototype.find()
