--- a/07 - Array Cardio Day 2/index-START copy.html
+++ b/07 - Array Cardio Day 2/index-START copy.html
@@ -28,8 +28,10 @@
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
     let is19Some = people.some((value, index) => 2025 - people[index].year >= 19);
+    console.log(is19Some);
     // Array.prototype.every() // is everyone 19 or older?
-
+    let areAll19 = people.every((value, index) => 2025 - people[index.year >= 19]);
+    console.log(areAll19);
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
