--- a/07 - Array Cardio Day 2/index-START copy.html
+++ b/07 - Array Cardio Day 2/index-START copy.html
@@ -40,6 +40,9 @@
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let commentToDel = comments.findIndex((item) => item.id === 823423);
+    comments.splice(commentToDel, 1)
+    console.table(comments);
 
   </script>
 </body>
